Gzip response support (#20)
Add support for requesting gzipped responses from the API. Closes #19